# Hermes

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp  run.sh
.cache/clangd/index/: RegisterView.cpp.70D4437A5200A097.idx  RegisterView.h.D940EC05402C7D9A.idx  main.cpp.0771C57B1DEFCC05.idx
datas/include/: admin.h
datas/sqlite3/: admin.sqlite3
datas/sqls/: Admin.sql  admin.ddl
include/: DataBase.h  Encrypter.h  Eutils.hpp  LoginView.h  RegisterView.h  Sqlite3.h  store.hpp
src/: Encrypter.cpp  LoginView.cpp  RegisterView.cpp  Sqlite3.cpp
test/: learn_crow.hpp  test_crow.hpp  test_spdlog.hpp  test_sqlpp.hpp
